# textual-test

./: README.md  pyproject.toml
fastapi_test/: cli.py  cli.styles  main.py
tutorial/: stopwatch.py  stopwatch.styles
