[tool.poetry]
name = "textual-test"
version = "0.1.0"
description = "Playing around with Textual"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = {extras = ["dev"], version = "^0.19.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
