[tool.poetry]
name = "textual-test"
version = "0.1.0"
description = "Playing around with Textual"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = {extras = ["dev"], version = "^0.19.1"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
pep8-naming = "^0.13.3"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
